--- a/examples/speech-m.yaml
+++ b/examples/speech-m.yaml
@@ -32,23 +32,30 @@ defaults:
 speech:
   train:
     default_layer_dim: 512
+    attender_hidden_dim: 128
+    output_word_embed_dim: 64
+    output_state_dim: 256
+    output_mlp_hidden_dim: 512
+    decoder_layers: 2
     encoder:
       type: modular
       modules:
       - type: StridedConv
         layers: 2
-        output_tensor: True
+#        output_tensor: True
+        output_tensor: False
         input_dim: 240
         chn_dim: 3
         num_filters: 32
         batch_norm: True
-      - type: ConvBiLSTM
-        layers: 1
-        chn_dim: 32
-        input_dim: 608
+#      - type: ConvBiLSTM
+#        layers: 1
+#        chn_dim: 32
+#        input_dim: 608
       - type: NiNBiLSTM
         layers: 2
-        input_dim: 1216
+        input_dim: 608
+#        input_dim: 1216
         output_dim: 512
         batch_norm: True
       - type: BiLSTM
