--- a/examples/speech-m.yaml
+++ b/examples/speech-m.yaml
@@ -20,7 +20,9 @@ defaults:
     encoder:
       type: PyramidalBiLSTM
     # indicate the dimension of the feature vectors:
-    input_word_embed_dim: 240
+    input_word_embed_dim:
+    - 80
+    - 3
     # indicates that the src-side data is continuous-space vectors, contained in a numpy archive (see input.py for details):
     input_format: contvec
   decode:
