fixed tuple-vs-int issue when using embed-dim as encoder input-dim

--- a/examples/speech-m.yaml
+++ b/examples/speech-m.yaml
@@ -44,7 +44,7 @@ speech:
       modules:
       - type: StridedConv
         layers: 3
-        output_tensor: True
+        output_tensor: False
         input_dim: 240
         chn_dim: 3
         num_filters: 32
@@ -53,13 +53,13 @@ speech:
         - (2,2)
         - (2,2)
         - (2,1)
-      - type: ConvBiLSTM
-        layers: 1
-        chn_dim: 32
-        input_dim: 544
+#      - type: ConvBiLSTM
+#        layers: 1
+#        chn_dim: 32
+#        input_dim: 544
       - type: NiNBiLSTM
         layers: 2
-        input_dim: 1088
+        input_dim: 544
         batch_norm: True
         stride: 1
         num_projections: 1
