--- a/examples/speech-m.yaml
+++ b/examples/speech-m.yaml
@@ -42,35 +42,38 @@ speech:
     encoder:
       type: modular
       modules:
-      - type: StridedConv
+#      - type: StridedConv
+#        layers: 3
+#        output_tensor: False
+#        input_dim: 240
+#        chn_dim: 3
+#        num_filters: 32
+#        batch_norm: True
+#        nonlinearity: maxout
+#        stride:
+#        - (2,2)
+#        - (2,2)
+#        - (2,1)
+      - type: PoolingConv
         layers: 3
-        output_tensor: False
         input_dim: 240
-        chn_dim: 3
-        num_filters: 32
-        batch_norm: True
-        nonlinearity: maxout
-        stride:
-        - (2,2)
-        - (2,2)
-        - (2,1)
-      - type: ConvBiLSTM
-        layers: 1
-        chn_dim: 32
-        num_filters: 32
-        input_dim: 544
-        residual: True
-      - type: NiNBiLSTM
-        layers: 2
-        input_dim: 1088
-        batch_norm: True
-        stride: 1
-        num_projections: 1
-        projection_enabled: True
-        nonlinearity: relu
+#      - type: ConvBiLSTM
+#        layers: 1
+#        chn_dim: 32
+#        num_filters: 32
+#        input_dim: 544
+#        residual: True
+#      - type: NiNBiLSTM
+#        layers: 2
+#        input_dim: 1088
+#        batch_norm: True
+#        stride: 1
+#        num_projections: 1
+#        projection_enabled: True
+#        nonlinearity: relu
       - type: BiLSTM
         layers: 1
-        input_dim: 512
+        input_dim: 288
         output_dim: 512
         
 
