--- a/examples/speech-m.yaml
+++ b/examples/speech-m.yaml
@@ -55,8 +55,12 @@ speech:
 #        - (2,2)
 #        - (2,1)
       - type: PoolingConv
-        layers: 3
         input_dim: 240
+        pooling:
+        - False
+        - (2,2)
+        - False
+        - (2,2)
 #      - type: ConvBiLSTM
 #        layers: 1
 #        chn_dim: 32
@@ -73,7 +77,7 @@ speech:
 #        nonlinearity: relu
       - type: BiLSTM
         layers: 1
-        input_dim: 288
+        input_dim: 512
         output_dim: 512
         
 
