--- a/examples/speech-m.yaml
+++ b/examples/speech-m.yaml
@@ -43,7 +43,7 @@ speech:
     output_mlp_hidden_dim: 512
     decoder_layers: 2
     encoder:
-      type: modular
+      type: Modular
       modules:
 #      - type: StridedConv
 #        layers: 3
@@ -61,9 +61,9 @@ speech:
         input_dim: 240
         pooling:
         - False
-        - (2,2)
+        - !!python/tuple [2,2]
         - False
-        - (2,2)
+        - !!python/tuple [2,2]
 #      - type: ConvBiLSTM
 #        layers: 1
 #        chn_dim: 32
@@ -81,6 +81,6 @@ speech:
       - type: BiLSTM
         layers: 1
         input_dim: 512
-        output_dim: 512
+        hidden_dim: 512
         
 
