--- a/examples/speech.yaml
+++ b/examples/speech.yaml
@@ -11,6 +11,7 @@ defaults:
     run_for_epochs: 20
     eval_metrics: cer,wer
   train:
+    base_lstm_builder: compact
     src_format: contvec
     training_corpus: !BilingualTrainingCorpus
       train_src: examples/data/synth.contvec.npz
