--- a/examples/01_standard.yaml
+++ b/examples/01_standard.yaml
@@ -36,17 +36,18 @@
       scorer: !Softmax {}
   # training parameters
   train: !SimpleTrainingRegimen
-    batcher: !SrcBatcher
-      batch_size: 32
+    task: !ConditionedTrainingTask
+      batcher: !SrcBatcher
+        batch_size: 32
+      run_for_epochs: 2
+      src_file: examples/data/head.ja
+      trg_file: examples/data/head.en
+      dev_tasks:
+        - !LossEvalTask
+          src_file: examples/data/head.ja
+          ref_file: examples/data/head.en
     trainer: !AdamTrainer
       alpha: 0.001
-    run_for_epochs: 2
-    src_file: examples/data/head.ja
-    trg_file: examples/data/head.en
-    dev_tasks:
-      - !LossEvalTask
-        src_file: examples/data/head.ja
-        ref_file: examples/data/head.en
   # final evaluation
   evaluate:
     - !AccuracyEvalTask
