--- a/test/config/lm.yaml
+++ b/test/config/lm.yaml
@@ -9,20 +9,17 @@ lm: !Experiment
       layers: 1
     scorer: !Softmax
       vocab: !Vocab {vocab_file: examples/data/head.en.vocab}
-  train: !SimpleTrainingRegimen
+  train: !UnconditionedTrainingRegimen
     batcher: !SrcBatcher
       batch_size: 32
     trainer: !AdamTrainer
       alpha: 0.001
     run_for_epochs: 2
-    src_file: examples/data/head.en
     trg_file: examples/data/head.en
     dev_tasks:
       - !LossEvalTask
-        src_file: examples/data/head.en
         ref_file: examples/data/head.en
   # final evaluation
   evaluate:
   - !LossEvalTask
-    src_file: examples/data/head.en
     ref_file: examples/data/head.en
