--- a/test/config/lm.yaml
+++ b/test/config/lm.yaml
@@ -9,16 +9,17 @@ lm: !Experiment
       layers: 1
     scorer: !Softmax
       vocab: !Vocab {vocab_file: examples/data/head.en.vocab}
-  train: !UnconditionedTrainingRegimen
-    batcher: !SrcBatcher
-      batch_size: 32
+  train: !SimpleTrainingRegimen
     trainer: !AdamTrainer
       alpha: 0.001
-    run_for_epochs: 2
-    trg_file: examples/data/head.en
-    dev_tasks:
-      - !LossEvalTask
-        ref_file: examples/data/head.en
+    task: !UnconditionedTrainingTask
+      batcher: !SrcBatcher
+        batch_size: 32
+      run_for_epochs: 2
+      trg_file: examples/data/head.en
+      dev_tasks:
+        - !LossEvalTask
+          ref_file: examples/data/head.en
   # final evaluation
   evaluate:
   - !LossEvalTask
