--- a/test/custom/symmetric.yaml
+++ b/test/custom/symmetric.yaml
@@ -4,7 +4,7 @@ symmetric: !Experiment
     log_file: '{EXP_DIR}/logs/{EXP}.log'
     default_layer_dim: 512
     dropout: 0.3
-    #compute_report: True
+    compute_report: True
   model: !SymmetricTranslator
     mode: teacher
     sampling_prob: !DefinedSequence { sequence: [0.0,0.3,0.4,0.5] }
@@ -46,7 +46,7 @@ symmetric: !Experiment
       batch_size: 10
     trainer: !AdamTrainer
       alpha: 0.001
-    run_for_epochs: 10
+    run_for_epochs: 0
     src_file: [examples/data/head.ja, examples/data/head.en]
     trg_file: examples/data/head.en
     dev_tasks:
@@ -61,8 +61,10 @@ symmetric: !Experiment
       hyp_file: examples/output/{EXP}.test_hyp
       inference: !IndependentOutputInference
         post_process: join-char
-        mode: forceddebug
+        #mode: forceddebug
         ref_file: examples/data/head.en
         batcher: !InOrderBatcher
           batch_size: 1
-        #reporter: !AttentionReporter {}
+        reporter:
+        - !AttentionReporter {}
+        - !SymmetricReporter {}
