implemented probabilistic_masks option

--- a/examples/lattice-selfatt.yaml
+++ b/examples/lattice-selfatt.yaml
@@ -27,6 +27,7 @@ lattice: !Experiment
               input_dim: 512
               child: !MultiHeadAttentionLatticeTransducer
                 num_heads: 8
+                probabilistic_masks: False
               layer_norm: True
             - !ResidualSeqTransducer
               input_dim: 512
